Fixes so sidebar is hidden for small devices and text doesn't overflow #table1 tables

--- a/html/wp-content/themes/jewmich/style.css
+++ b/html/wp-content/themes/jewmich/style.css
@@ -129,9 +129,6 @@ nav, header, section, article, h1, h2, h3, h4, p {
 		text-align: center;
 		width: 230px;
 	}
-	#pageContent.has-sidebar .pageContentCol {
-		width: calc(100% - 230px);
-	}
 
 	.home #pageContent .pageContentWrapperCol {
 		background: rgba(255, 255, 255, 0.6);
@@ -208,6 +205,9 @@ nav, header, section, article, h1, h2, h3, h4, p {
 
 /*small-to-medium devices (phones) */
 @media screen and (max-width: 1023px) {
+	.sidebar {
+		display: none;
+	}
 	#carousel {
 		display: none;
 	}
@@ -308,6 +308,9 @@ nav, header, section, article, h1, h2, h3, h4, p {
 	#adults_article {
 		margin: 0 8px;
 	}
+	#pageContent.has-sidebar .pageContentCol {
+		width: calc(100% - 230px);
+	}
 }
 
 
@@ -328,7 +331,10 @@ nav, header, section, article, h1, h2, h3, h4, p {
 .chabad a:hover {	color: #727272; }
 table.chabad .label { white-space: nowrap }
 
-#table1 { width: 100%; }
+#table1 {
+	width: 100%;
+	table-layout: fixed;
+}
 
 .successmsg {
 	color: #2f4f2f;
